# Sourcecodeforplayer

./: ReadMe.md
AudioFilter/: CMakeLists.txt
AudioFilter/autobuild/Android/: Filter_Version.cpp  build.sh  build_cmake.sh
AudioFilter/dependency/makefile/android/: makefile
AudioFilter/dependency/makefile/mac/: makefile
AudioFilter/doc/: 接口文档.md
AudioFilter/makefile/android/: makefile_so
AudioFilter/makefile/mac/: installFilter.sh  makefile
AudioFilter/sample/: filter.json
AudioFilter/sample/mac/AudioPlayer/AudioPlayer/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  ViewController.mm  main.m
AudioFilter/sample/mac/AudioPlayer/AudioPlayer.xcodeproj/: project.pbxproj
AudioFilter/sample/mac/AudioPlayer/AudioPlayer.xcodeproj/project.xcworkspace/xcuserdata/develop.xcuserdatad/: UserInterfaceState.xcuserstate
AudioFilter/sample/mac/AudioPlayer/AudioPlayer.xcodeproj/xcshareddata/xcschemes/: AudioPlayer.xcscheme
AudioFilter/sample/mac/AudioPlayer/AudioPlayer/Base.lproj/: Main.storyboard
AudioFilter/sample/mac/AudioPlayer/AudioPlayerTests/: AudioPlayerTests.m
AudioFilter/sample/mac/AudioPlayer/AudioPlayerUITests/: AudioPlayerUITests.m  AudioPlayerUITestsLaunchTests.m
AudioFilter/sample/mac/SetFilter/SetFilter/: AppDelegate.h  AppDelegate.m  ChangePositionView.h  ChangePositionView.m  CustomSliderView.h  CustomSliderView.m  FilterParamView.h  FilterParamView.m  SeparateChannelView.h  SeparateChannelView.m  SetFilter.entitlements  ViewController.h  ViewController.m  main.m
AudioFilter/sample/mac/SetFilter/SetFilter.xcodeproj/: project.pbxproj
AudioFilter/sample/mac/SetFilter/SetFilter/Base.lproj/: Main.storyboard
AudioFilter/sample/mac/SetFilter/SetFilterTests/: SetFilterTests.m
AudioFilter/sample/mac/SetFilter/SetFilterUITests/: SetFilterUITests.m  SetFilterUITestsLaunchTests.m
AudioFilter/sample/mac/testDelay/testDelay/: main.c
AudioFilter/sample/mac/testDelay/testDelay.xcodeproj/: project.pbxproj
AudioFilter/src/dhfilter/: FilterEngine.c  FilterEngine.cpp  FilterEngine.h  FilterLog.h  FilterTypes.h  Filter_Version.cpp  delay_processor.c  delay_processor.h  equalizer_custom.c  equalizer_custom.h
(+226 files in other folders)
